--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width">
 	<title>Transition Page</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 	<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100&display=swap" rel="stylesheet">
@@ -18,6 +20,27 @@
 			</ul>
 		</div>
 	</div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.12.1/rellax.min.js"></script>
+	<header>
+		<div class="absolute">
+			<div class="bg rellax" data-rellax-speed="-16"></div>
+		</div>
+		<div class="absolute">
+			<img class="rellax" alt="57" data-rellax-speed="-16" src="img/backmnt.png">
+		</div>
+		<div class="absolute">
+			<img class="rellax" alt="57" data-rellax-speed="-13" src="img/midmnt.png">
+		</div>
+		<div class="absolute">
+			<img class="rellax" alt="57" data-rellax-speed="-8" src="img/frntmnt.png">
+		</div>
+		<div class="absolute">
+			<img src="img/frnt.png">
+		</div>
+        <div class="coverText">
+            <h2 class="rellax" data-rellax-speed="-6">TRANSITION<br />STUDIO</h2>
+            <p class="rellax" data-rellax-speed="-5">Taking you on a journey of discovery. Creating your digital experience.</p>
+        </div>
+	</header>
+<script type="text/javascript" src="rellax.min.js"></script>
 </body>
 </html>
