add parallaxx effect

--- a/index.html
+++ b/index.html
@@ -10,37 +10,49 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div class="fixedTop">
-		<div class="logo">Transition</div>
-		<div class="nav">
-			<ul>
-				<li><a href="#cont">Service</a></li>
-				<li><a href="#cont">About</a></li>
-				<li><a class="focus" href="#cont">Engagez-nous</a></li>
-			</ul>
-		</div>
-	</div>
-	<header>
-		<div class="absolute">
-			<div class="bg rellax" data-rellax-speed="-16"></div>
-		</div>
-		<div class="absolute">
-			<img class="rellax" alt="57" data-rellax-speed="-16" src="img/backmnt.png">
-		</div>
-		<div class="absolute">
-			<img class="rellax" alt="57" data-rellax-speed="-13" src="img/midmnt.png">
-		</div>
-		<div class="absolute">
-			<img class="rellax" alt="57" data-rellax-speed="-8" src="img/frntmnt.png">
-		</div>
-		<div class="absolute">
-			<img src="img/frnt.png">
-		</div>
+    <div class="fixedTop">
+        <div class="logo">TRANSITION</div>
+        <div class="nav">
+            <ul>
+                <li><a href="#cont">Services</a></li>
+                <li><a href="#cont">About</a></li>
+                <li><a class="focus" href="#cont">Hire Us</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <header>
+        <div class="absolute">
+            <div class="bg rellax" data-rellax-speed="-16"></div>
+        </div>
+        <div class="absolute">
+            <img class="rellax" data-rellax-speed="-13" src="img/backmnt.png">
+        </div>
+        <div class="absolute">
+            <img class="rellax" data-rellax-speed="-8" src="img/midmnt.png">
+        </div>
+        <div class="absolute">
+            <img class="rellax" data-rellax-speed="-4" src="img/frntmnt.png">
+        </div>
         <div class="coverText">
             <h2 class="rellax" data-rellax-speed="-6">TRANSITION<br />STUDIO</h2>
             <p class="rellax" data-rellax-speed="-5">Taking you on a journey of discovery. Creating your digital experience.</p>
         </div>
+        <div class="absolute">
+            <img src="img/frnt.png">
+        </div>
 	</header>
-<script type="text/javascript" src="rellax.min.js"></script>
+	<div id="cont" class="content">
+
+	<div class="grid">
+		<div><img src="img/cave.svg"></div>
+		<div>
+			<h2 class="rellax" data-rellax-speed="-1">The Journey Begins Now</h2>
+			<p class="rellax" data-rellax-speed="-2">Lorem Ipsum: usage. Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to emphasise design elements over content. It's also called placeholder (or filler) text. It's a convenient tool for mock-ups. Lorem Ipsum: usage. Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to emphasise design elements over content. It's also called placeholder (or filler) text. It's a convenient tool for mock-ups.</p>
+		</div>
+	</div>
+	</div>
+<script type="text/javascript" src="js/rellax.min.js"></script>
+<script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
